fixed header image size layout issue

--- a/src/styles/4-templates/header.sass
+++ b/src/styles/4-templates/header.sass
@@ -8,6 +8,7 @@
     .banner
         grid-area: i
         width: 100%
+        transform: translateX(-10vw)
         
 
     .bannerArchitectureLogo 
@@ -51,7 +52,7 @@
     .banner
         grid-area: i
         width: 100%
-        
+        transform: translateX(0vw)
         justify-self: center
         
 
